--- a/index.html
+++ b/index.html
@@ -613,7 +613,8 @@
         calculate(name, motorPrice, motorJangkaWaktu, motorUangMuka);
       }
 
-      if ('elektronik') {
+      if (name == 'elektronik') {
+        console.log('elektronik---')
         let data = {}
         let data1, data2, data3, data4, data5;
 
