--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At magni, dolorem placeat eum in quia!</p>
       <div class="submit_div">
-        <button type="submit" id="submit_btn_1" class="submit" onclick="myFunction('AjukanSekarang')" disabled>Hitung
+        <button type="submit" id="submit_elektronik" class="submit" onclick="myFunction('AjukanSekarang')"
+          disabled>Hitung
           Cicilan
           Anda</button>
       </div>
@@ -479,6 +480,7 @@
         }
         console.log('---here---')
         document.getElementById("eleForm5").disabled = false;
+        document.getElementById("submit_elektronik").disabled = false;
         document.getElementById("eleForm4").innerHTML = str;
 
         descr = []
@@ -506,7 +508,7 @@
           str += `<option value=${item.id}>${item.id}</option>`
         }
         console.log('---here---')
-        document.getElementById("submit_btn_1").disabled = false;
+        document.getElementById("submit_elektronik").disabled = false;
         document.getElementById("eleForm5").innerHTML = str;
 
         descr = []
