--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         </div>
 
         <div class="submit_div">
-          <button type="submit" class="submit" onclick="myFunction('elektronik')" disabled>Hitung Cicilan Anda</button>
+          <button type="submit" id="submit_elektronik" class="submit" onclick="myFunction('elektronik')" disabled>Hitung
+            Cicilan Anda</button>
         </div>
 
       </form>
@@ -94,8 +95,7 @@
 
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At magni, dolorem placeat eum in quia!</p>
       <div class="submit_div">
-        <button type="submit" id="submit_elektronik" class="submit" onclick="myFunction('AjukanSekarang')"
-          disabled>Hitung
+        <button type="submit" class="submit" onclick="myFunction('AjukanSekarang')" disabled>Hitung
           Cicilan
           Anda</button>
       </div>
