--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
         data.data5 = data5;
 
         console.log(data, 'Data---->')
-        // $("#ele_form").addClass("hide");
-        $("#ele_form").css("display", "none !important")
+        $("#ele_form").addClass("hide");
+        // $("#ele_form").css("display", "none !important")
         $("#submit_form").addClass("show");
         console.log('---------')
         document.getElementById("myForm").reset();
