--- a/index.html
+++ b/index.html
@@ -641,8 +641,10 @@
         data.data5 = data5;
 
         console.log(data, 'Data---->')
-        $("#ele_form").classList.remove("show");
-        $("#submit_form").classList.remove("hide");
+        // $("#ele_form").classList.remove("show");
+        // $("#submit_form").classList.remove("hide");
+        $("#ele_form").removeClass("show");
+        $("#submit_form").removeClass("hide");
         $("#ele_form").addClass("hide");
         $("#submit_form").addClass("show");
         console.log('---------')
