--- a/index.html
+++ b/index.html
@@ -87,15 +87,22 @@
       </form>
     </div>
 
-    <div class="ele_form submit_Form hide" id="submit_form">
-      <h2>Estimasi Cicilan Bulanan Anda</h2>
-      <div class="calculationAmount"></div>
-      <p>Perhitungan hanya bersifat simulasi, dapat berubah sesuai regulasi BAF. Ajukan aplikasi pembiayaan dan kami
-        akan menghubungi Anda.</p>
-      <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;" onclick="">Ajukan
-        Sekarang</button>
 
-      <!-- <h3>Estimasi Cicilan Bulanan Anda</h3>
+    <div class="container calculation hide" id="submit_form">
+      <div style="text-align: center">
+        <h2>Estimasi Cicilan Bulanan Anda</h2>
+        <div class="calculationAmount">Rp. 2,110,000/ Bulan</div>
+        <p>Perhitungan hanya bersifat simulasi, dapat berubah sesuai regulasi BAF. Ajukan aplikasi pembiayaan dan kami
+          akan menghubungi Anda.</p>
+        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;">Ajukan
+          Sekarang</button>
+
+      </div>
+    </div>
+
+    <!-- <div class="ele_form submit_Form hide" id="submit_form">
+
+      <h3>Estimasi Cicilan Bulanan Anda</h3>
       <div class="price">
         <h1>Rp. 2,110,000/ Bulan</h1>
       </div>
@@ -104,9 +111,9 @@
       <div class="submit_div">
         <button type="submit" class="submit" onclick="myFunction('AjukanSekarang')" disabled>Hitung
           Cicilan
-          Anda</button> -->
-    </div>
-  </div>
+          Anda</button>
+      </div>
+    </div> -->
   </div>
 
   <div class="main-container2">
