--- a/index.html
+++ b/index.html
@@ -189,14 +189,6 @@
         </div>
 
 
-
-
-
-        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-          Launch demo modal
-        </button> -->
-
-        <!-- Modal -->
         <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
           aria-labelledby="exampleModalLongTitle" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -938,8 +930,8 @@
     function showDetailForm() {
       $("#submit_form").removeClass("show");
       $("#submit_form").addClass("hide");
-      $("#sele_form_details").removeClass("hide");
-      $("#sele_form_details").addClass("show");
+      $("#ele_form_details").removeClass("hide");
+      $("#ele_form_details").addClass("show");
     }
 
 
