--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="main-container">
 
-    <div class="cards hide" id="cards">
+    <div class="cards" id="cards">
       <div class="card_1" onclick="nextStep1()">
         <img src="./assets/image/svg/new-mp-home.svg" alt="">
       </div>
